썸네일 업로드 구현 및 유튜브 링크 변환 로직